# mssql-mcp-server

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
src/mssql_mcp_server/: server.py
