[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mssql-mcp-server"
version = "1.0.0"
description = "A Model Context Protocol server for Microsoft SQL Server"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "sql-server", "database", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyodbc>=4.0.35",
    "python-dotenv>=1.0.0",
    "mcp>=0.7.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mssql-mcp-server"
Repository = "https://github.com/yourusername/mssql-mcp-server"
Issues = "https://github.com/yourusername/mssql-mcp-server/issues"

[project.scripts]
mssql-mcp-server = "mssql_mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
